--- a/i18n/pt/docusaurus-plugin-content-blog/2024/10-20-update-archcraft.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog/2024/10-20-update-archcraft.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 03-archcraft-update
-title: Update Archcraft to October 2024 version
+title: Atualização do Archcraft versão de outubro de 2024
 authors: adi1090x
 tags: [archcraft, update, os]
 hide_table_of_contents: true
@@ -19,122 +19,124 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74"><b>MAJOR</b></Highlight> The most recent Archcraft October ISO has undergone significant modifications that cannot be fully implemented through a Pacman update. To upgrade your current installation to the most recent Archcraft version, some manual tasks must be completed.
+<Highlight color="#e06b74"><b>MAJOR</b></Highlight> A mais recente ISO do Archcraft, de outubro sofreu uma modificação sicnificativa que não pode ser completamente implementada através de uma atualização com Pacman. Para atualizar sua instalação para a versão mais recente do Archcraft, algumas tarefas manuais são necessárias.
 
 <!--truncate-->
 
-To ensure a seamless and successful upgrade, please adhere to the following steps:
+Para garantir uma atualização perfeia, favor seguir os passos seguintes:
 
-## Perform a comprehensive system upgrade
+## Faça uma atualização compreensiva do sistema
 
-Commence the process by upgrading the system. To achieve this, launch a terminal and execute the following command:
+Comece o processo com uma atualização do sistema. Para fazer isso, abra o terminal e execute os seguintes comandos:
 
 ```bash
 sudo pacman -Syyu
 ```
-Upon completion, proceed to reboot the computer. Post-reboot, you may encounter certain unexpected changes, such as:
+Depois de completo, reinicie o computador. Após reiniciar, você pode encontrar certas mudanças inesperadas, como:
 
-- Compromised Openbox themes
-- Truncated icons/glyphs within Rofi
-- Issues with the Picom compositor
-- And so on
+- Temas do Openbox comprometidos
+- Ícones/Glifos quebrados dentro do Rofi
+- Problemas com o compositor Picom
+- E algo mais
 
-Fret not, for we shall rectify these matters. Simply adhere to the subsequent steps:
+Não se preocupe, vamos corrigir esses assuntos. Simplesmente siga os passos abaixo:
 
-### 1. Install `archcraft-skeleton` package
-A new package called `archcraft-skeleton` is now available for installation. This package contains updated configuration files for Picom and other applications.
+### 1. Instale o pacote `archcraft-skeleton`
+Um novo pacote chamado `archcraft-skeleton` está disponível para instalação. Esse pacote contém arquivos de configurações atualizadas para o Picom e outras aplicações.
 
-Since the old configuration files already exist on your system and are not associated with any specific package, you will need to overwrite them with the new files. To do this, simply run the following command:
+Como temos arquivos antigos de configurações existentes no seu sistema que não estão associados a um pacote específico, você terá que sobreescrevê-los com os novos arquivos. Para fazer isso, execute o seguinte comando:
+
 ```bash
 sudo pacman -S --overwrite "*" archcraft-skeleton
 ```
 
-### 2. Install New Cursor, Icons, and Themes
-The repository now includes numerous new cursor, icon, and GTK themes. These new themes will not be automatically installed during system upgrades because they are part of a group package. To install all the new cursor, icon, and GTK themes, execute the following command:
+### 2. Instale novos Cursores, Ícones e Temas
+Agora o repositório tem vários novos cursores, ícones e temas GTK. Esses novos temas não são instalados automaticamente durante a atualização do sistema porque eles fazem parte de um grupo de pacotes. Para instalar todos os novos cursores, ícones e temas GTK, execute o comando a seguir:
+
 ```bash
 sudo pacman -S archcraft-cursors archcraft-icons archcraft-themes
 ```
 
-### 3. Update the Openbox Window Manager Configuration
+### 3. Atualize a configuração do Openbox Window Manager
 
-The Openbox window manager has undergone significant visual updates, particularly with icon and nerd fonts. These changes may cause glyphs to break in various components like Polybar, Rofi, and other places where custom icons are used. To address this, you have two options:
+O gestor de janelas Openbox traz atualizações visuais significativas, particularmente com ícones e fontes nerd. Essas mudancas pode quebrar os glifos em vérios componentes como Polybar, Rofi e outros lugares onde esses ícones custom são usados. Para endereçá-los, você têm duas opções:
 
-1. **Manual Update**:
-   - Use the tool `meld` to compare and merge the new and old configurations. The updated configuration files should be located in your config directory under `openbox_pacnew_YYYY-MM-DD`. Open these files with `meld` and integrate the necessary changes into your existing setup.
+1. **Atualização Manual**:
+   - Use a ferramenta `meld` para comparar e mesclar as configurações novas e antigas. Os arquivos de atualização atualizados devem estar localizados no seu diretório de configuração dentro de  `openbox_pacnew_YYYY-MM-DD`. Abra esses arquivos com `meld` e integre as mudanças necessárias na sua configuração existente.
 
-2. **Automated Update**:
-   - If you'd like to streamline the process, you can back up your existing Openbox configuration and apply the new files. To do this, execute the following commands in your terminal:
+2. **Atualização Automatizada**:
+	- Caso você queira simplificar o processo, você pode salvar sua configuração existente do Openbox e aplicar os novos arquivos. Para fazer isso, execute os seguintes comandos no terminal:
 
    ```bash
    cp -rf ~/.config/openbox ~/.config/openbox_backup_$(date +%Y-%m-%d)
    mv ~/.config/openbox_pacnew_YYYY-MM-DD ~/.config/openbox
    ```
 
-After completing these steps, log out and log back in to apply the new configurations.
+Depois de completar esses passos, faça log out e log in novamente para aplicar as novas configurações.
 
-### 4. Update the BSPWM Window Manager Configuration
+### 4. Atualização das configurações do gestor de janelas BSPWM
 
-Similar to Openbox, the BSPWM window manager has also undergone several visual changes. You have two options to update BSPWM:
+Similar ao Openbox, o gesto de janelas BSPWM também traz grandes mudanças visuais. Você têm duas opções para atualizar o BSPWM:
 
-1. **Manual Update**:
-   - As with Openbox, you can use `meld` to compare the new and old BSPWM configuration directories. The new configuration files will be installed in your config directory under `bspwm_pacnew_YYYY-MM-DD`. Use `meld` to review and apply changes as needed.
+1. **Atualização Manual**:
+	- Assim como no Openbox, você pode usar o `meld` para comparar os diretórios de configuração do BSPWM antigos com os novos. Os novos arquivos de configuração estão intalados na sua pasta de configuração dentro da pasta `bspwm_pacnew_YYYY-MM-DD`. Use o `meld` para visualizar e aplicar as mudanças necessárias.
 
-2. **Automated Update**:
-   - For a simpler approach, back up your current BSPWM configuration and replace it with the new files by running:
+2. **Atualização Automatizada**:
+	- Para uma abordagem simples, salve suas configurações atuais do BSPWM e substitua pelos arquivos novos executando:
 
    ```bash
    cp -rf ~/.config/bspwm ~/.config/bspwm_backup_$(date +%Y-%m-%d)
    mv ~/.config/bspwm_pacnew_YYYY-MM-DD ~/.config/bspwm
    ```
 
-After these changes, log out and log back in to activate the new configuration.
+Depois dessas mudanças, faça log out e log in novamente para ativar a nova configuração.
 
-### 5. Update the Picom Compositor Configuration
+### 5. Atualização das Configurações do Compositor Picom
 
-The package installed in Step 1 (`archcraft-skeleton`) includes updated configuration files for Picom. To apply the new Picom configuration, simply copy the `picom.conf` file from `/etc/skel` to your local config directory by running:
+O pacote instalado no passo 1 (`archcraft-skeleton`) inclui os arquivos de configuração atualizados para o Picom. Para aplicar a nova configuração do Picom, Simplesmente copie o arquivo `picom.conf` de `/etc/skel` para o seu diretório local executando:
 
 ```bash
 cp /etc/skel/.config/picom.conf ~/.config/picom.conf
 ```
 
-After copying, restart the Picom compositor to apply the new configuration.
+Depois de cpiar, reinicie o compositor Picom para aplicar a nova configuração.
 
-### 6. Miscellaneous Updates
+### 6. Atualizações Variadas
 
-In addition to the major changes, there are a few minor updates that you may want to apply.
+Em adição às maiores mudanças, aqui estão algumas atualizações menores que você queira aplicar.
 
-#### a. Updated Alacritty Configuration
-The Alacritty terminal configuration has been updated. You can copy the new configuration files from `/etc/skel` to your home directory by running the following command:
+#### a. Atualização da Configuração do Alacritty
+A configuração do terminal Alacritty foram atualizadas. Você pode copiar os arquivos novos de `/etc/skel` para o seu diretório home usando o comando seguinte:
 
 ```bash
 cp -r /etc/skel/.config/alacritty ~/.config/alacritty
 ```
 
-#### b. New Kitty Terminal Configuration
-Support for the Kitty terminal has been added to both Openbox and BSPWM. To start using Kitty, install it and copy the configuration files to your home directory:
+#### b. Nova Configuração do Terminal Kitty
+Suporte para o terminal Kitty foi adicionado em Openbox e BSPWM. Para começar a usar o Kitty, instale-o e copie os arquivos de configuração para o seu diretório home:
 
 ```bash
 sudo pacman -S kitty
 cp -r /etc/skel/.config/kitty ~/.config/kitty
 ```
 
-#### c. Updated Neofetch Configuration
-The Neofetch configuration has also been updated. If you prefer to use the latest version, copy the new configuration files with this command:
+#### c. Atualização da Configuração do Neofetch
+A configuração do Neofetch foi atualizada. Se você preferir usar a última versão, copie os novos arquivos de configuração com esse comando:
 
 ```bash
 cp -r /etc/skel/.config/neofetch ~/.config/neofetch
 ```
 
-#### d. Updated Zsh Theme Configuration
-The Archcraft Zsh theme has been updated as well. If you'd like to use the new theme, copy the updated configuration files by running:
+#### d. Atualização da Configuração do Tema do Zsh
+O tema Archcraft para o Zsh foi atualizado. Se você quiser usar o novo tema, copie os arquivos atualizados com o comando:
 
 ```bash
 cp -r /etc/skel/.oh-my-zsh ~/.oh-my-zsh
 ```
 ___
 
-These are the necessary changes to fully update your installation to the latest release. Please note that if you are using a window manager other than Openbox or BSPWM, those configurations have not been updated yet. However, updates for those will be available soon. I am currently focused on preparing new ISO releases, after which I will work on updating the additional window managers.
+Essas são as mudanças necessárias para atualizar sua instalação para o nova versão. Por favor note que se você estiver usando um gestor de janelas diferente do Openbox e BSPWM, essas configurações não foram atualizadas ainda. No entanto, atualizações para todos estão a caminho. Atualmente eu estou focado na preparação das novas versões da ISO, depois irei trabalhar em atualizacões para os gestores de janela adicionais.
 
-I hope this guide has been helpful in assisting you with the update process. Stay tuned for further updates.
+Eu espero que este guia tenha ajudado você no processo de atualização. Fiquem ligados em atualizações futuras.
 
-Take care!
+Fiquem bem!
