--- a/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/hyprland.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/hyprland.mdx
@@ -23,9 +23,9 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-Hyprland is a dynamic tiling Wayland compositor based on wlroots that doesn't sacrifice on its looks.
+Hyprland é um compositor Wayland dinâmico de tiling baseado no wlroots que não se sacrifica na aparência.
 
 <Tabs>
 
@@ -45,60 +45,59 @@ Hyprland is a dynamic tiling Wayland compositor based on wlroots that doesn't sa
 
 :::tip[Archcraft Hyprland]
 
-Get Hyprland From [**`ko-fi`**](https://ko-fi.com/s/71d0e298d9) And Support Archcraft Development.
+Baixe o Hyprland em [**`ko-fi`**](https://ko-fi.com/s/71d0e298d9) And Support Archcraft Development.
 
 :::
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Follow the instructions below to install Hyprland :
+Siga as instruções abaixo para instalar o Hyprland:
 
-- Download **hyprland.tar.gz** file from [ko-fi](https://ko-fi.com/s/71d0e298d9), and save it in a directory.
-- Open a terminal in same directory and run the following command to extract the tar file :
+- Baixe o arquivo **hyprland.tar.gz** em [ko-fi](https://ko-fi.com/s/71d0e298d9), e salve em um diretório.
+- Abra o terminal no mesmo diretório e execute o seguinte comando para extrair o arquivo tar:
 ```bash
 $ tar -xzvf hyprland_YYYY-MM-DD.tar.gz
 ```
-- Once the file is extracted, change to the extracted directory which should be **`hyprland`**
+- Depois de extraído, mude para o diretório extraído que deve ser **`hyprland`**
 
 <Tabs>
 
-<TabItem value="wc_1" label="Install On Archcraft" default>
+<TabItem value="wc_1" label="Instale No Archcraft" default>
 
-On Archcraft, You can simply install the provided packages in **pkgs** directory :
-
-**To install dark version :**
+No Archcraft, você pode simplesmente instalar os pacotes no diretório **pkgs**:
+**Para instalar a versão dark:**
 ```bash
 $ sudo pacman -U archcraft-hyprland-X.Y-Z-any.pkg.tar.zst
 ```
 
-**To install catppuccin version :**
+**Para instalar a versão catppuccin:**
 ```bash
 $ sudo pacman -U archcraft-hyprland-catppuccin-X.Y-Z-any.pkg.tar.zst
 ```
 
 </TabItem>
 
-<TabItem value="wc_2" label="Install On Other Distributions" default>
+<TabItem value="wc_2" label="Instale em Outra Distribuição" default>
 
-If you want to install this setup on Arch Linux or on any other distro, follow the points below : 
-- Install the following programs on your Linux distro: [`hyprland`](https://github.com/vaxerski/Hyprland), `swaybg` `swayidle` `swaylock` `wlroots` `wl-clipboard` `waybar` `wofi` `foot` `mako` `grim` `slurp` `wf-recorder` `light` `yad` `thunar` `geany` `mpv` `mpd` `mpc` `viewnior` `imagemagick` `xfce-polkit` `xorg-xwayland` `xdg-desktop-portal-wlr` `playerctl` `pastel` `python-pywal` `alacritty` `rofi` `pulsemixer`
-- After installing programs above, Create hypr directory in **`~/.config`**
+Se você quiser instalar esse setup no Arch Linux ou em qualquer outra distribuição, siga os pontos abaixo:
+- Instale os seguintes programas em sua distribuição Linux: [`hyprland`](https://github.com/vaxerski/Hyprland), `swaybg` `swayidle` `swaylock` `wlroots` `wl-clipboard` `waybar` `wofi` `foot` `mako` `grim` `slurp` `wf-recorder` `light` `yad` `thunar` `geany` `mpv` `mpd` `mpc` `viewnior` `imagemagick` `xfce-polkit` `xorg-xwayland` `xdg-desktop-portal-wlr` `playerctl` `pastel` `python-pywal` `alacritty` `rofi` `pulsemixer`
+- Depois de instalar os programas acima, crie uma pasta chamada hypr em **`~/.config`**
 ```bash
 $ mkdir -p ~/.config/hypr
 ```
-- To install **dark** style, Copy Everything from _`dotfiles/dark`_ to **`~/.config/hypr`**
+- Para instalar o estilo **dark**, copie tudo de  _`dotfiles/dark`_ para **`~/.config/hypr`**
 ```bash
 $ cp -r ./dotfiles/dark/* ~/.config/hypr/
 ```
-- To install **catppuccin** style, Copy Everything from _`dotfiles/catppuccin`_ to **`~/.config/hypr`**
+- Para instalar o estilo **catppuccin**, copie tudo de _`dotfiles/catppuccin`_ para **`~/.config/hypr`**
 ```bash
 $ cp -r ./dotfiles/catppuccin/* ~/.config/hypr/
 ```
-- Logout and login to your amazingly configured Hyprland WC.
+- Faça log out e log in em seu incrivelmente configurado Hyprland WC.
 
-> Install the **fonts** from `fonts` and **GTK theme, icons and cursor** from `gtk` directory for overall appearance.
+> Instale as **fontes** de `fonts` e **Tema GTK, Ícones e Cursores** da pasta `gtk` para uma aparência geral.
 
 </TabItem>
 
@@ -106,37 +105,37 @@ $ cp -r ./dotfiles/catppuccin/* ~/.config/hypr/
 
 :::info[Archcraft Prime]
 
-<Highlight color="#62aeef">Hyprland</Highlight> comes pre-installed on [**`Archcraft WSE`**](https://ko-fi.com/s/213becbf00) and [**`Archcraft Prime`**](https://ko-fi.com/s/c925a2a8c1) ISOs.
+<Highlight color="#62aeef">Hyprland</Highlight> vem pré-instalado nas ISOs [**`Archcraft WSE`**](https://ko-fi.com/s/213becbf00) e [**`Archcraft Prime`**](https://ko-fi.com/s/c925a2a8c1).
 
 :::
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-Hyprland is pre-configured in Archcraft. In this section, We'll see how the Hyprland wayland compositor is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+Hyprland é pré-configurado no Archcraft. Nesta seção, nós veremos como o compositor wayland Hyprland é configurado, quais ferramentas e utilitários são usados para fazê-lo parecer e funcionar como um ambiente gráfico completo.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of Hyprland in Archcraft looks something like this:
+A estrutura de configuração do Hyprland no Archcraft se parece com isso:
 
 ```
 ~/.config
-└── hypr               : hyprland config directory
-    ├── alacritty      : alacritty terminal config
-    ├── foot           : foot terminal config
-    ├── mako           : notification daemon config
-    │   └── icons      : notification icons
-    ├── rofi           : rofi config files
-    ├── scripts        : various scripts for functionality
-    ├── theme          : current theme and pywal themes
+└── hypr               : pasta de configuração do hyprland
+    ├── alacritty      : configuração do terminal alacritty
+    ├── foot           : configuração do terminal foot
+    ├── mako           : configuração do daemon de notificação
+    │   └── icons      : ícones de notificação
+    ├── rofi           : arquivos de configuração de rofi
+    ├── scripts        : vários scripts para funcionalidades
+    ├── theme          : tema atual e temas do pywal
     ├── wallpapers     : wallpapers
-    ├── waybar         : statusbar config
-    ├── wlogout        : wlogout config
-    │   └── icons      : session icons
-    ├── wofi           : launcher config
-    ├── hyprland.conf  : hyprland config file
-    └── hyprtheme.conf : colors and theme elements file
+    ├── waybar         : configurações da barra de status
+    ├── wlogout        : configurações do wlogout
+    │   └── icons      : ícones da sessão
+    ├── wofi           : configuraçẽs do lancador
+    ├── hyprland.conf  : arquivo de configuração do hyprland
+    └── hyprtheme.conf : arquivo de cores e elementos de tema
 ```
 
 ### Terminal
@@ -145,25 +144,25 @@ The configuration structure of Hyprland in Archcraft looks something like this:
 
 <TabItem value="wc_1" label="Default" default>
 
-**Alacritty** is the default terminal. In the Hyprland wayland compositor, alacritty is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.config/hypr/alacritty` directory. These are the following config files you can modify to change the behaviour of your alacritty terminal:
+**Alacritty** é o terminal padrão. No compositor wayland Hyprland , alacritty é lançado com um arquivo de configuração alternativo. Se você precisar mudar algo, tenha certeza que está modificando o arquivo de configuração em `~/.config/hypr/alacritty`. Você pode mudar os seguintes arquivos de configuração para alterar o comportamento do seu terminal alacritty.
 
-**`~/.config/hypr/alacritty/alacritty.toml`** : Main configuration file <br/>
-**`~/.config/hypr/alacritty/colors.toml`** : Colors configurations <br/>
-**`~/.config/hypr/alacritty/fonts.toml`** : Fonts configurations
+**`~/.config/hypr/alacritty/alacritty.toml`** : Arquivo de configuração principal <br/>
+**`~/.config/hypr/alacritty/colors.toml`** : Configurações de cor <br/>
+**`~/.config/hypr/alacritty/fonts.toml`** : Configurações de fontes
 
-> If you need any help with alacritty config, run : `man 5 alacritty` in terminal.
+> Se você precisar de qualquer ajuda com a configuração do alacritty, execute: `man 5 alacritty` no terminal.
 
 </TabItem>
 
-<TabItem value="wc_2" label="Alternate" default>
+<TabItem value="wc_2" label="Alternativa" default>
 
-**Foot** is the secondary/alternate terminal. In the Hyprland wayland compositor, foot is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.config/hypr/foot` directory. These are the following config files you can modify to change the behaviour of your foot terminal:
+**Foot** é o terminal secundário/alternativo. No compositor wayland Hyprland, foot é lançado com um arquivo de configuração alternativo. Se você precisar mudar algo, tenha certeza que está modificando o arquivo de configuração em `~/.config/hypr/foot`. Você pode mudar os seguintes arquivos de configuração para alterar o comportamento do seu terminal foot.
 
-**`~/.config/hypr/foot/foot.ini`** : Main configuration file <br/>
-**`~/.config/hypr/foot/colors.ini`** : Colors configurations <br/>
-**`~/.config/hypr/foot/fonts.ini`** : Fonts configurations
+**`~/.config/hypr/foot/foot.ini`** : Arquivo de configuração principal <br/>
+**`~/.config/hypr/foot/colors.ini`** : Configurações de cores <br/>
+**`~/.config/hypr/foot/fonts.ini`** : Configurações de fontes
 
-> If you need any help with foot config, run : `man foot.ini` in terminal.
+> Se você precisar de qualquer ajuda com as configurações do foot, execute: `man foot.ini` no terminal.
 
 </TabItem>
 
@@ -171,266 +170,265 @@ The configuration structure of Hyprland in Archcraft looks something like this:
 
 :::tip
 
-By Default, alacritty is used But, If you want to use foot as your default terminal, just edit the `~/.config/hypr/hyprland.conf` file and comment the keybindings for **`Terminal : alacritty`** and uncomment the bindings for **`Terminal : foot`**
+Por padrão, alacritty é usado, mas, se você quiser usar o foot como seu terminal padrão, basta editar o arquivo `~/.config/hypr/hyprland.config` e comentar a combinação de teclas para **`Terminal : alacritty`** e descomentar a combinação de teclas para **`Terminal : foot`**
 
 :::
 
 :::warning
 
-When you change the `theme`, the **colors.toml** file of alacritty and **colors.ini** file of foot get overwritten by the theme script.
+Quando você mudar o `tema`, o arquivo **colors.toml** do alacritty e o arquivo **colors.ini** do foot vão ser sobrescritos pelo script do tema.
 
 :::
 
-### Notification
+### Notificação
 
-**Mako** is used as a notification daemon for notifications in Hyprland. In the Hyprland wayland compositor, mako is launched with an alternative config file, which is `~/.config/hypr/mako/config`. So, If you need to modify anything, make sure you edit this file.
+**Mako** é usado como daemon de notificação no Hyprland. No compositor wayland Hyprland, mako é lançado com um arquivo de configuração alternativo, que é `~/.config/hypr/mako/config`. Então, Se você precisar modificar algo, tenha certeza de modificar este arquivo.
 
-> If you need any help with mako config, run : `man 5 mako` in terminal.
+> Se você precisar de alguma ajuda com as configurações do mako, execute `man 5 mako` no terminal.
 
 :::warning
 
-When you change the `theme`, the colors in **config** file get overwritten by the theme script.
+Quando você muda o `tema`, as cores no arquivo de **configuração** serão sobreescritas pelo script de tema.
 
 :::
 
 ### Wallpaper
 
-**swaybg** sets the wallpaper in the Hyprland. If you want to change the wallpaper, Edit `~/.config/hypr/scripts/wallpaper` script and add your wallpaper here :
+**swaybg** põe o papel de parede no Hyprland. Se você quiser mudar o papel de parede, edite o script `~/.config/hypr/scripts/wallpaper` e adicione o seu papel de parede aqui:
 ```bash
 WALLPAPER='/path/to/your/wallpaper'
 ```
 :::warning
 
-When you change the `theme`, the wallpaper path in `wallpaper` script get overwritten by the theme script.
+Quando você muda o `tema`, o papel de parede no caminho do script `wallpaper` é sobrescrito pelo script de tema.
 
 :::
 
-### Statusbar
+### Barra de status
 
-**Waybar** is used as the statusbar in Archcraft's Hyprland wayland compositor.
+**Waybar** é usado como barra de status no compositor wayland Hyprland do Archcraft.
 
-The configurations for waybar can be found inside `~/.config/hypr/waybar`. If you want to modify the **waybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+As configurações para waybar podem ser encontradas dentro da pasta `~/.config/hypr/waybar`. Se você quiser mudar as configurações da **waybar**, ou talvez queira adicionar ou remover módulos, então você precisa editar os seguintees arquivos:
 
-**`~/.config/hypr/waybar/config`** : Main config file <br/>
-**`~/.config/hypr/waybar/modules`** : Modules config file <br/>
-**`~/.config/hypr/waybar/style.css`** : CSS file for styling <br/>
-**`~/.config/hypr/waybar/colors.css`** : CSS colors file <br/>
+**`~/.config/hypr/waybar/config`** : Arquivo de configuração principal file <br/>
+**`~/.config/hypr/waybar/modules`** : Arquivo de configuração de módulos <br/>
+**`~/.config/hypr/waybar/style.css`** : Arquivo para estilo em CSS <br/>
+**`~/.config/hypr/waybar/colors.css`** : Arquivo de cores para CSS <br/>
 
-> If you need any help with waybar config, run : `man waybar`
+> Se você precisar de alguma ajuda com a configuração da waybar, execute: `man waybar`
 
 :::warning
 
-When you change the `theme`, the **colors.css** file of waybar get overwritten by the theme script.
+Quando você muda o `tema`, o arquivo **colors.css** da waybar é sobreescrito pelo script de tema.
 
 :::
 
-### Launchers and Applets
+### Lançadpres e Applets
 
 <Tabs>
 
 <TabItem value="wc_1" label="Rofi" default>
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+**Rofi** é usado como lançador de aplicativos, comandos e vários applets. Para modificar as configurações do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se você precisar de alguma ajuda com as configurações do rofi, execute: `man rofi` no terminal.
 
-The scripts for rofi that are used in Hyprland can be found it `~/.config/hypr/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets in Hyprland :
+Os scripts para o rofi que são usados no Hyprland podem ser encontrados em `~/.config/hypr/scripts`. os seguintes scripts são usados pelo rofi para os lançadores e applets no Hyprland:
 
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_network`** : network manager applet <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with grim <br/>
+**`rofi_bluetooth`** : applet do bluetooth para conectar rapidamente um dispositivo BT <br/>
+**`rofi_launcher`** : um lançador de aplicativo, comando, gestor de arquivos e gerenciador de tarefas  <br/>
+**`rofi_music`** : applet de música, que controla o MPD com `mpc` <br/>
+**`rofi_network`** : applet de gerenciamento de conexão <br/>
+**`rofi_powermenu`** : menu de energia, com diálogo de confirmação <br/>
+**`rofi_runner`** : para executar um comando rápido <br/>
+**`rofi_screenshot`** : applet de captura de tela que funciona com grim <br/>
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts.
+Se você quer mudar algum applet ou talvez extender sua funcionalidade, basta editar esses scripts.
 
-The configuration of each script can be found inside `~/.config/hypr/rofi` directory.
+A configuração de cada script pode ser encontrada dentro na pasta `~/.config/hypr/rofi`.
 
-Let's say that you want to modify the looks of **launcher**, then you need to edit the `~/.config/hypr/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Digamos que você quer mudar a paarência do **lançador**, então você tem que editar o arquivo `~/.config/hypr/rofi/launcher.rasi`. O mesmo serve para qualquer outro applet, edite o respectivo arquivo no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se você precisar de alguma ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.config/hypr/rofi/shared/colors.rasi` and `~/.config/hypr/rofi/shared/fonts.rasi` files.
+Para mudar as cores e fontes dos lançadores e applets, edite os arquivos `~/.config/hypr/rofi/shared/colors.rasi` e `~/.config/hypr/rofi/shared/fonts.rasi`.
 
 </TabItem>
 
 <TabItem value="wc_2" label="Wofi" default>
 
-Alternatively, **Wofi** is used for application launcher and powermenu.
+Arternativamente, **wofi** é usado para lançar apicativos e menu de energia.
 
-> If you need any help with wofi config, run : `man 5 wofi` in terminal.
+> Se você precisar de ajuda com as configurações do wofi, execute: `man 5 wofi` no terminal.
 
-The scripts for wofi that are used in Hyprland can be found it `~/.config/hypr/scripts` directory. These are the following scripts that uses wofi to provide the launchers and powermenu applets in Hyprland :
+Os scripts para wofi que são usados no Hyprland podem ser encontrados na pasta `~/.config/hypr/scripts`. Os seguintes scripts são usados pelo wofi para lançadores e menu de applets de menu de energiano Hyprland:
 
-**`wofi_menu`** : application launcher  <br/>
-**`wofi_powermenu`** : power menu, with confirmation dialog
+**`wofi_menu`** : lançador de aplicativos  <br/>
+**`wofi_powermenu`** : menu de energia, com diálogo de confirmação
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts.
+Se você quer modificar algum applet ou talvez extender sua funcionalidade, basta editar essees scripts.
 
-The configuration of wofi can be found inside `~/.config/hypr/wofi` directory.
+A configuração do wofi pode ser encontrada na pasta `~/.config/hypr/wofi`.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.config/hypr/wofi/style.css` file.
+Para mudar as cores e fontes dos lançadores e applets, edite o arquivo `~/.config/hypr/wofi/style.css`.
 
 </TabItem>
 
 <TabItem value="wc_3" label="Wlogout" default>
 
-**Wlogout**, A Wayland logout menu is also configured for session management is Hyprland.
+**Wlogout**, um menu de log out do Wayland também é configurado para gerenciar a sessão no Hyprland.
 
-Edit `~/.config/hypr/scripts/wlogout` script to adjust the looks of wlogout. The configuration of wlogout can be found inside `~/.config/hypr/wlogout` directory.
+Edite o script `~/.config/hypr/scripts/wlogout` para ajustar a aparẽncia do wlogout. A configuração do wlogout pode ser encontrada na pasta `~/.config/hypr/wlogout`.
 
-If you want to use wlogout instead of rofi and wofi, Edit the config file `~/.config/hypr/hyprland.conf` and uncomment wlogout keybindings.
+Se você quer usar o wlogout em vez do rofi ou wofi, edite o arquivo de configuração `~/.config/hypr/hyprland.conf` e descomente as combinações do wlogout.
 
-> If you need any help with wlogout config, run : `man wlogout` in terminal.
-
-</TabItem>
+> Se você quiser alguma ajuda com a configuração do wlogout, execute: `man wlogout` no terminal.
 
 </Tabs>
 
 :::tip
 
-By default, rofi is used as app launcher. But, If you want to use wofi instead of rofi, Edit the config file `~/.config/hypr/hyprland.conf` and uncomment wofi keybindings (and, comment the rofi bindings).
+Por padrão , rofi é usado como lançador de app. Mas, se você quiser usar o wofi, edite o arquivo de configuração `~/.config/hypr/hyprland.conf` e descomente a combinação de wofi (e, comente a combinação do rofi).
 
 :::
 
 :::warning
 
-When you change the `theme`, the **shared/colors.rasi** file of rofi and **style.css** files of wofi get overwritten by the theme script.
+Quando você muda o `tema`, o arquivo **shared/colors.rasi** do rofi e o arquivo **style.css** do wofi são sobreescritos pelo script de tema.
 
 :::
 
-### wayland compositor
+### compositor wayland
 
-The configuration of Hyprland is available in `~/.config/hypr`. To configure Hyprland wayland compositor, these are the files that are used :
+A configuração do Hyprland está disponível em `~/.config/hypr`. Para configurar o compositor wayland Hyprland, estes são os arquivos usados:
 
-**`hyprland.conf`** : main configuration file for general settings, input/output settings, keybindings and window rules, etc <br/>
-**`hyprtheme.conf`** : theme configuration, fonts, colors, borders, gaps etc.
+**`hyprland.conf`** : arquivo de configuração principal para configurações gerais, entrada/saída, atalhos de teclado e regras de janela, etc. <br/>
+**`hyprtheme.conf`** : configuração de tema, fonte, cores, bordas, gaps, etc.
 
-> If you need any help with hyprland configuration, visit : [Hyprland Wiki](https://wiki.hyprland.org)
+> Se você precisar de ajuda com as configurações do hyprland, visite: [Hyprland Wiki](https://wiki.hyprland.org)
 
 :::warning
 
-When you change the `theme`, colors in **hyprtheme.conf** file gets overwritten by the theme script.
+Quando você muda o `tema`, cores no arquivo **hyprtheme.conf** são sobreescritas pelo scipt de tema.
 
 :::
 
 <!-- Keybindings ---------------------------------- -->
 
-## Keybindings
+## Atalhos de Teclado
 
-Here's a list of some important keybinds you need to know for operating Hyprland easily. If you want to view, modify or add new keybinds, Edit `~/.config/hypr/hyprland.conf` file.
+Aqui temos uma lista dos atalhos de teclado mais importantes que você pecisa saber para usar o Hyprland com facilidade. Caso queira ver, modificar ou adicionar novos atalhos, edite o arquivo `~/.config/hypr/hyprland.conf`.
 
-### Applications
+### Applicações
 
-| Keys | Action |
+| Teclas | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal |
-| <kbd>super + shift + Return</kbd> | Open floating terminal |
-| <kbd>super + T</kbd> | Open fullscreen terminal |
-| <kbd>super + shift + F</kbd> | Open file manager (thunar) |
-| <kbd>super + shift + E</kbd> | Open text editor (geany) |
-| <kbd>super + shift + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre o terminal |
+| <kbd>super + shift + Return</kbd> | Abre o terminal flutuante |
+| <kbd>super + T</kbd> | Abre o terminal em tela cheia |
+| <kbd>super + shift + F</kbd> | Abre o gestor de arquivos (thunar) |
+| <kbd>super + shift + E</kbd> | Abre o editos de texto (geany) |
+| <kbd>super + shift + W</kbd> | Abe o navegador (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Teclas | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Open application launcher |
-| <kbd>super + D</kbd> | Open application launcher |
-| <kbd>super + R</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + A</kbd> | Open screenshots applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
+| <kbd>super</kbd> | Abre o lançador de aplicativos |
+| <kbd>super + D</kbd> | Abre o lançador de aplicativos |
+| <kbd>super + R</kbd> | Abre o lançador de comando |
+| <kbd>super + N</kbd> | Abre o gerenciador de conexão |
+| <kbd>super + M</kbd> | Abre o applet de música |
+| <kbd>super + X</kbd> | Abre o menu de energia |
+| <kbd>super + A</kbd> | Abre o applet de captura de tela |
+| <kbd>super + B</kbd> | Abre o applet de bluetooth |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Teclas | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>ctrl + Print</kbd> | Take screenshot of currently focused window |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Media controls (MPD) |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira um screenshot |
+| <kbd>alt + Print</kbd> | Tira um screenshot com 5 segundos de espera |
+| <kbd>shift + Print</kbd> | Tira um screenshot com 10 segundos de espera |
+| <kbd>ctrl + Print</kbd> | Tira um screenshot da janela com foco |
+| <kbd>super + Print</kbd> | Tira um screenshot da área selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta o volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui o volume |
+| <kbd>XF86AudioMute</kbd> | Alterna o modo mudo |
+| <kbd>XF86AudioMicMute</kbd> | Alterna o modo mudo para o microfone |
+| <kbd>XF86Audio + Next/Prev/Play/Stop</kbd> | Controle de mídia (MPD) |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta o brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui o brilho da tela |
 
-### Workspaces
-| Keys | Action |
+### Áreas de Trabalho
+
+| Teclas | Ação |
 | --- | --- |
-| <kbd>super + 1..8</kbd> | Switch to workspaces |
-| <kbd>super + shift + 1..8</kbd> | Send active window to respective workspaces |
-| <kbd>ctrl + alt + Left/Right</kbd> | Switch to previous/next workspace |
-| <kbd>ctrl + alt + shift + Left/Right</kbd> | Send active window to previous/next workspace |
-| <kbd>super + ctrl + F</kbd> | Toggled all float mode on current workspace |
-| <kbd>super + ctrl + S</kbd> | Toggled all pseudo mode on current workspace |
+| <kbd>super + 1..8</kbd> | Muda para área de tabalho |
+| <kbd>super + shift + 1..8</kbd> | Envia a janela ativa para a área de trabalho respectiva |
+| <kbd>ctrl + alt + Left/Right</kbd> | Muda para a anterior/próxima área de trablaho |
+| <kbd>ctrl + alt + shift + Left/Right</kbd> | Envia a janela ativa para a anterior/próxima área de trabalho |
+| <kbd>super + ctrl + F</kbd> | Alterna para o modo flutuante na área de trabalho atual |
+| <kbd>super + ctrl + S</kbd> | Alterna para o modo pseudo na área de trabaçho atual |
 
-### Window Management
+### Gestor de Janelas
 
-| Keys | Action |
+| Teclas | Ação |
 | --- | --- |
-| <kbd>super + C/Q</kbd> | Close focued window |
-| <kbd>super + F</kbd> | Toggle fullscreen |
-| <kbd>super + S</kbd> | Toggle pseudo mode |
-| <kbd>super + Space</kbd> | Toggle float |
-| <kbd>super + Left/Right/Up/Down</kbd> | Change focus of window respectively |
-| <kbd>super + shift + Left/Right/Up/Down</kbd> | Move active window respectively |
-| <kbd>super + ctrl + Left/Right/Up/Down</kbd> | Resize active window respectively |
-| <kbd>super + alt + Left/Right/Up/Down</kbd> | Move floating window respectively |
-| <kbd>super + Tab</kbd> | Switch between windows |
-| <kbd>super + shift + P</kbd> | Toggled pin |
-| <kbd>super + shift + S</kbd> | Swap next |
-| <kbd>super + shift + O</kbd> | Toggle opaque |
+| <kbd>super + C/Q</kbd> | Fecha a janela em foco |
+| <kbd>super + F</kbd> | Alterna para tela cheia |
+| <kbd>super + S</kbd> | Alterna para o modo pseudo |
+| <kbd>super + Space</kbd> | Alterna para flutuante |
+| <kbd>super + Left/Right/Up/Down</kbd> | Muda o foco para a janla respectivamente |
+| <kbd>super + shift + Left/Right/Up/Down</kbd> | Move a janela ativa respectivamente |
+| <kbd>super + ctrl + Left/Right/Up/Down</kbd> | Redimenciona a janela ativa respectivamente |
+| <kbd>super + alt + Left/Right/Up/Down</kbd> | Move a janela flutuante respectivamente |
+| <kbd>super + Tab</kbd> | Troca entre as janelas |
+| <kbd>super + shift + P</kbd> | Alterna o modo fixar |
+| <kbd>super + shift + S</kbd> | Troca para a próxima |
+| <kbd>super + shift + O</kbd> | Alterna para opaco |
 
-### Misc Keys
+### Atalhos Variados
 
-| Keys | Action |
+| Teclas | Ação |
 | --- | --- |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>ctrl + alt + Delete</kbd> | Quit Hyprland |
+| <kbd>super + P</kbd> | Executa o seletor de cor  |
+| <kbd>ctrl + alt + L</kbd> | Bloqueia a tela |
+| <kbd>ctrl + alt + Delete</kbd> | Sai do Hyprland |
 
 <!-- Nvidia --------------------------------------- -->
 
 ## Nvidia
 
-If you're on `Archcraft` and install the provided package, There's nothing else you need to do in order to run it on Nvidia machine. When you install Archcraft on a machine that has Nvidia, It does all the operations (mentioned below) required to run a wayland compositor on such machines. The compositor should work fine.
+Se você está usando `Archcraft` e instalou os pacotes providos, não há mais nada que você tenha que fazer para rodar em uma máquina Nvidia. Quando você instala o Archcraft em máquina com Nvidia, ele faz todas as operações (mencionadas abaixo) requeridas para rodar o compositor wayland em sua máquina. O compositor deverá funcionar bem.
 
-If you're running any other distribution and want to install this setup on your Nvidia machine, You need to do some tweaking. In this guide, I'm assuing you're using **Arch Linux**. Follow the steps below to make this wayland compositor work on Nvidia :
+Se você está rodando alguma outra distribuição e quer instalar na sua máquina com Nvidia, você precisa fazer alguns ajuses. Nesse guia, estarei assumindo que você está usando **Arch Linux**. Siga os passos abaixo para fazer este compositor wayland funcionar com Nvidia:
 
-- Install **Nvidia Dhyprs** on your system. [NVIDIA](https://wiki.archlinux.org/title/NVIDIA) 
-- Edit `/etc/mkinitcpio.conf` file and add **`nvidia`** kernel modules
+- Instale **Nvidia Dhyprs** no seu sistema. [NVIDIA](https://wiki.archlinux.org/title/NVIDIA) 
+- Edite o aquivo `/etc/mkinitcpio.conf` e adicione os módulo do kernel **`nvidia`**
 ```
 MODULES="nvidia nvidia_modeset nvidia_uvm nvidia_drm"
 ```
 
-- In the same file, Remove `kms` hook from hooks array if present.
-- Rebuild your initrd file with : `sudo mkinitcpio -P linux`
-- Edit `/etc/default/grub` file and add **`nvidia_drm.modeset=1`** kernel parameter for Nvidia
+- No mesmo arquivo, remova o hook `kms` da variável de hooks se tiver
+- Reconstrua o seu arquivo initrd com: `sudo mkinitcpio -P linux`
+- Edite o arquivo `/etc/default/grub` e adicione o parâmetro **`nvidia_drm.modeset=1`** do kernel para Nvidia
 ```
 GRUB_CMDLINE_LINUX_DEFAULT="quiet splash nvidia_drm.modeset=1 ..."
 ```
 
-- Update your grub config file with : `sudo grub-mkconfig -o /boot/grub/grub.cfg`
-- Reboot your Nvidia Machine and login to your wayland compositor, It should work now.
+- Atualize sua configuração do grub com: `sudo grub-mkconfig -o /boot/grub/grub.cfg`
+- Reinicie sua máquina Nvidia e faça login no seu compositor wayland, isso deve funcionar agora.
 
-More Information: [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
+Mais informações: [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
 ### Desktop
 
-Here's few screenshots of `Hyprland` desktop. These'll give you an idea of the experience of Hyprland in Archcraft. 
+Aqui estão alguns screenshots do `hyprland`. Isso irá te dar uma ideia da experiência do Hyprland no Archcraft.
 
 <Tabs>
 
@@ -468,9 +466,9 @@ Here's few screenshots of `Hyprland` desktop. These'll give you an idea of the e
 
 </Tabs>
 
-### Themes
+### Temas
 
-To Change the theme, Click on `Color Palette` icon on waybar. To apply a random theme, **`Left Click`** on the theme module and To restore the default theme, **`Right Click`** on the theme module.
+Para mudar o tema, clique no ícone `Paleta de Cores` na waybar. Para aplicar um tema aleatório, **`Clique com botão esquerdo`** no módulo de tema e para restaurar o tema padrão, **`Clique com botão direito`** no módulo de tema.
 
 <Tabs>
 
@@ -497,23 +495,23 @@ To Change the theme, Click on `Color Palette` icon on waybar. To apply a random 
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar as minhas configurações para as novas?</b></summary>
 
-Download the updated package from ko-fi (for free) and just install it to update to new configs.
+Baixe o pacote atualizado em ko-fi (de graça) e apenas instale-o para atualizar para as novas configurações.
 
-#### Steps to get updates (or re-download files):
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+#### Passos para pegar as atualizações (ou baixar os arquivos novamente):
+- Faça login na sua conta do Ko-fi
+- Vá para o seu `Histórico e Pagamentos Ko-fi`
+- Selecione as compras que você fez
+- Clique em `Ver Detalhes`
+- Depois, clique em `Ver Conteúdo` para baixar os arquivos atualizados.
 
 </details>
 
 <details>
-<summary><b>Why my cursor is not visible?</b></summary>
+<summary><b>Por que meu cursor não está visível?</b></summary>
 
-When using certain graphics dhyprs (e.g. the VMSVGA graphics controller or the proprietary NVIDIA dhypr), the cursor is invisible. This can be fixed by using software cursors :
+Quando usamos certos drivers gráficos (ex: o controlador gráfico VMSVGA ou o driver proprietário da Nvidia), o cursor fica invisível. Isso pode ser consertado usando um software de cursor:
 ```bash
 $ export WLR_NO_HARDWARE_CURSORS=1
 ```
@@ -521,9 +519,9 @@ $ export WLR_NO_HARDWARE_CURSORS=1
 </details>
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como trocar o tema GTK, icones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in Hyprland session, Edit `~/.config/hypr/scripts/gtkthemes` script and restart Hyprland to apply the changes.
+Para mudar o tema GTK, ícones e cursor no Hyprland, edite o arquivo `~/.config/hypr/scripts/gtkthemes` e reinicie o Hyprland para aplicar as mudanças.
 ```bash
 THEME='Manhattan'
 ICONS='Luv-Folders-Dark'
@@ -534,12 +532,12 @@ CURSOR='Qogirr'
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in Hyprland?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resolução no Hyptland?</b></summary>
 
-If you use multiple monitors with Hyprland wayland compositor, you can manage them as follow:
+Se você usa vários monitores com o compositor wayland Hyprland, você pode gerenciá-los como a seguir:
 
-1. You can get the names of your outputs with `wlr-randr`
-2. Edit `~/.config/hypr/hyprland.conf` file and use the information you get by the command above:
+1. Você pode dar nomes para as saídas com `wlr-randr`
+2. Edite o arquivo `~/.config/hypr/hyprland.conf` e use a informação que você pegou com o comando acima:
 ```ini
 # Laptop screen, mode: 1920x1080, scale: 1, gaps of 10 each side
 monitor = eDP-1,1920x1080@60,0x0,1
@@ -557,11 +555,11 @@ workspace = HDMI-A-1,2
 </details>
 
 <details>
-<summary><b>Why Alacritty is not working on my computer?</b></summary>
+<summary><b>Por que o Alacritty não está funcionando no meu computador?</b></summary>
 
-Since Alacritty is a OpenGL based terminal emulator, It may not work on some computer hardwares. You can make it work on such computers by following these methods :
+Desde que o Alacritty é um emulador de terminal baseado em OpenGL, ele pode não funcionar em alguns hardwares. Você pode fazê-lo funcionar nestes computadores seguindo esses métodos:
 
-1. Open alacritty with **LIBGL_ALWAYS_SOFTWARE=1** variable. Edit the keybindings/script launching alacritty and replace `alacritty` with `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
-2. Edit **/usr/share/applications/Alacritty.desktop** desktop file and replace `Exec=alacritty` with `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+1. Abra o alacritty com a variável **LIBGL_ALWAYS_SOFTWARE=1**. Edite o atalho/script que lança o alacritty e substitua `alacritty` por `LIBGL_ALWAYS_SOFTWARE=1 alacritty`
+2. Edite o arquivo **/usr/share/applications/Alacritty.desktop** e substitua `Exec=alacritty` por `Exec=env LIBGL_ALWAYS_SOFTWARE=1 alacritty`
 
 </details>
